this one cant fuck up

--- a/hons/docs/symboltable.tex
+++ b/hons/docs/symboltable.tex
@@ -2,7 +2,7 @@
 \hline
 {\bf Symbol} & \multicolumn{1}{c |}{{\bf Meaning}} \\ \hline
 $\path{a}{b}{c}$ & 
-The predicate determining whether nodes b and c are connected in the graph a. \\ \hline
+The predicate determining whether vertices $b$ and $c$ are connected with the edge-set $a$. \\ \hline
 $\npath{a}{b}{c}$ & 
 The negation of the path predicate $\path{a}{b}{c}$. \\ \hline
 $\rInstance$ & 
