--- a/hons/docs/tAbstract.tex
+++ b/hons/docs/tAbstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
 
-The streaming paradigm provides powerful solutions to many modern high-performance computations.
-Programs in this domain can be easily decomposed into large-grained parallel executing units, whereas for normal sequential code this is known to be difficult.
+The streaming paradigm is a viable vehicle for many modern high-performance applications.
+Programs expressed as stream graphs have the property to be decomposable into large-grained parallel executing units, whereas for normal sequential code this is known to be difficult.
 However, when operating in a high-performance environment, robustness to failures becomes important.
 As such, we focus our attention on developing robust and extensible frameworks to allow streaming computations to run on heterogeneous networked (cloud) systems.
 
