--- a/hons/docs/tAck.tex
+++ b/hons/docs/tAck.tex
@@ -1,5 +1,18 @@
 \begin{acknowledgements}
 
-TBQH i owe ppl quite alot...
+This thesis was only made possible by the support and expertise of the Sydney Programming Languages group.
+First I thank my supervisor Dr. Bernhard Scholz.
+His expertise and familiarity with this are helped me find my way through the quagmire of knowledge.
+In this short year i have learned more about the challenges facing computation than i every would have thought.
+I thank him for keeping me on-track and well informed.
+
+Also, i thank Dr. Andrew Santosa and S.M. Farhad.
+Andrew's tireless efforts in editing and helpful suggestions made sure we got to the finish line in good form.
+I thank him for the revising and the re-revising, and teaching me the meaning of the term {\em formal proof}.
+Farhad's tutorials on the basics of SDF and the intricacies of AMPL were invaluable.
+I thank him for the head-start he gave me in my experimental work.
+
+Finally, i thank all the members of the Sydney Programming Languages group, my family, and the School of IT.
+Without whom, studying this year, and my thesis, would not have been possible.
 
 \end{acknowledgements}
