--- a/hons/docs/tConclusion.tex
+++ b/hons/docs/tConclusion.tex
@@ -34,7 +34,7 @@ However reducing the costs of communication may make replication a viable strate
 \subsection{Parallelism}
 
 One simplification to the model that was made early on was the removal of parallel costs.
-When we consider the running time of a program we only care about how long it takes to finish, rather than the sum of time it takes on every processor.
+When we consider the running time of a program we only concerned with how long it takes to finish, rather than the sum of time it takes on every processor.
 This is called the parallel makespan, or parallel cost, and using this instead means only counting the cost of the single processor which is expected to take the longest to run its subset of the steady-state schedule.
 In the model described in Chapter \ref{chapModel}, the cost of invocation is a total over all actors.
 
