--- a/hons/docs/tIntroduction.tex
+++ b/hons/docs/tIntroduction.tex
@@ -6,9 +6,6 @@ An overview of the structure of the work, and its specific contributions, are ou
 
 \section{Problem Context}
 
-A brief introduction to the problem context is necessary first.
-Chapter \ref{chapBack} will provide a more thorough background.
-
 Concurrency and parallelism have become critical in modern applications.
 The use of multicore platforms, in addition the so-called {\em cloud} computers (networked heterogeneous clusters), are becoming more common, in particular for data management in large data centres, however, to access their full potential requires effort on the part of the programmer to parallelise code.
 One method of achieving explicit parallelisation for certain kinds of computations is to decompose the program to an interconnected network of functions, called a {\em computational graph}.
@@ -82,11 +79,12 @@ In order to fulfil the goals stated in section \ref{secInGoal} this thesis makes
 \section{Thesis Structure}
 
 This thesis presents the methodologies involved in, and results of, the analysis of fault tolerance for SDF graphs.
+The structure of this thesis is as follows.
 
 Chapter \ref{chapBack} provides a thorough background for the thesis.
 The current trends in the SDF paradigm are examined and explained.
 This chapter also introduces the concepts behind industry standard fault tolerance mechanisms.
-Chapter \ref{chapExample} gives the user an example SDF program which will be used throughout the thesis.
+Chapter~\ref{chapExample} gives the user an example SDF program which will be used throughout the thesis.
 This example is a real-world sorting algorithm, implemented in SDF.
 The intention is to show the reader how this paradigm is used practically, as well as some of its finer points.
 
