--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -87,7 +87,8 @@
   
   
   \begin{center}
-  \large Supervisor: Dr. Bernhard Scholz\\[0.4cm]
+  \large Supervisor: Dr. Bernhard Scholz\\
+  Associate Supervisor: Dr Andrew Santosa\\[0.4cm]
 
   This thesis is submitted in partial fulfillment of\\
   the requirements for the degree of\\
