--- a/hons/docs/tBackground.tex
+++ b/hons/docs/tBackground.tex
@@ -55,7 +55,7 @@ If we called that channel $e$ then $src(e) = a$, $snk(e) = b$, $productions(e) =
 
 At any given point in time there are some number of tokens in buffers in the system waiting to be consumed by actors.
 Tokens which exist on an actor's input channels before invocation are called $delays$
-Note that an actor must have sufficient delays on its channel (at least $consumptions(c)$) before it can be invoked.
+Note that an actor must have sufficient delays on its channel (at least $consumptions(e)$) before it can be invoked.
 The global configuration of delays on all channels is called the {\em fill state}.
 The first desirable property of SDF is how it maintains the fill state.
 
@@ -67,8 +67,8 @@ To calculate this we first express the SDF graph as a {\em topological matrix}, 
 	\item zero otherwise.
 \end{itemize}
 \noindent Importantly if the rank of this matrix is $n-1$ then the repetitions vector can be computed.
-Figure \ref{figSimpleTop} shows the topological matrix $\Gamma$ and repetitions vector $r$ for graph b) in figure \ref{figSimpleSDF}.
-For a description of the properties of the repetitions vector and its computation see \cite{sdfBook}.
+Figure \ref{figSimpleTop} shows the topological matrix $\Gamma$ and repetitions vector $r$ for graph b) in Figure \ref{figSimpleSDF}.
+For a description of the properties of the repetitions vector and its computation refer to \cite{sdfBook}.
 Importantly if we invoke each actor exactly the number of times the repetitions vector details, then the fill state of the graph remains unchanged.
 This solves two key problems associated with unrestricted streaming systems.
 Firstly, the existence of the repetitions vector means that we can prevent $starvation$ where an actor can not fire because there are not enough tokens on its input channels.
@@ -106,7 +106,7 @@ These illustrate the two areas of interest for streaming systems; software and h
 However the data need not be conceptualised as streams in order for streaming programs to be useful.
 
 More modern applications leverage the inherent parallelism in computational graphs to speed up common applications such as databases and data-mining.
-A more complete description of these systems can be found in the Related Works section.
+A more complete description of these systems can be found in Chapter \ref{chapRelated}.
 Streaming solutions lend themselves naturally to the kind of large scale and often distributed databases that companies deal with regularly.
 
 The other large area of use is in signal processing and other variants of real time systems.
@@ -116,7 +116,7 @@ Applications of this kind benefit from the more natural expression of the stream
 \section{Fault Tolerance}
 \subsection{Motivating Problems}
 Fault tolerance (FT) has a broad meaning in regards to computer systems.
-Intuitively we think of FT as some mechanisms or practices inherent in systems that prevent them from failing completely under adverse circumstances.
+Intuitively, we think of FT as some mechanisms or practices inherent in systems that prevent them from failing completely under adverse circumstances.
 Though this understanding lacks formal grounding, as we shall see it is useful to begin with.
 Most computer users will experience faults on a regular basis, ranging from bugs or errors to more serious security flaws and instability.
 Systems which are able to ignore or recover from such problems may be called fault tolerant.
