--- a/hons/docs/finalPresentation.tex
+++ b/hons/docs/finalPresentation.tex
@@ -181,7 +181,11 @@
 \begin{columns}
 \begin{column}{5cm}
 \begin{itemize}
-	\item test.
+	\item Formalised FT Mechanisms.
+	\item Developed AMPL Model
+	\item Proved NP-Hardness
+	\item Developed a Heuristic solver, shown to be 10\% worse
+	\item Developed and experimented on SDFSimulator
 \end{itemize}
 \end{column}
 \begin{column}{5cm}
@@ -195,7 +199,10 @@
 \end{column}
 \begin{column}{5cm}
 \begin{itemize}
-	\item test.
+	\item Parallelism
+	\item Hybridising fault tolerance mechanisms
+	\item Approximations
+	\item Cloud deployment.
 \end{itemize}
 \end{column}
 \end{columns}
