--- a/hons/docs/finalPresentation.tex
+++ b/hons/docs/finalPresentation.tex
@@ -33,7 +33,7 @@
 
 \begin{frame}{The Problem}
 \begin{columns}
-\begin{column}{5cm}
+\begin{column}{6cm}
 \begin{itemize}
 	\item High performance computing
 	\item Parallelisable paradigms
@@ -44,7 +44,8 @@
 	\item Opportunity for catering FT to SDF
 \end{itemize}
 \end{column}
-\begin{column}{5cm}
+\begin{column}{4cm}
+	\center{\includegraphics[width=4cm]{../res/multiradio.png}}
 \end{column}
 \end{columns}
 \end{frame}
@@ -52,6 +53,7 @@
 \begin{frame}{Related Work}
 \begin{columns}
 \begin{column}{5cm}
+	\center{\includegraphics[width=5cm]{../res/multicut.png}}
 \end{column}
 \begin{column}{5cm}
 \begin{itemize}
@@ -74,18 +76,12 @@
 \end{frame}
 
 \begin{frame}{Research Goals}
-\begin{columns}
-\begin{column}{5cm}
 \begin{itemize}
 	\item How do we provide FT?
 	\item What is the cost of ensuring FT?
 	\item How do we implement the FT mechanisms?
 	\item What guarantees can be made?
 \end{itemize}
-\end{column}
-\begin{column}{5cm}
-\end{column}
-\end{columns}
 \end{frame}
 
 %-----------------------------------------------------------------------------------
@@ -113,6 +109,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{5cm}
+	\center{\includegraphics[width=5cm]{../res/approx.png}}
 \end{column}
 \end{columns}
 \end{frame}
@@ -120,6 +117,7 @@
 \begin{frame}{Simulator}
 \begin{columns}
 \begin{column}{5cm}
+	\center{\includegraphics[width=5cm]{../res/sysDiagram.png}}
 \end{column}
 \begin{column}{5cm}
 \begin{itemize}
@@ -137,8 +135,6 @@
 \section{Experiments}
 
 \begin{frame}{Fault Tolerance}
-\begin{columns}
-\begin{column}{5cm}
 \begin{itemize}
 	\item Single Failure:
 	\begin{itemize}
@@ -152,17 +148,9 @@
 		\item Recomputation excessively restarts
 	\end{itemize}
 \end{itemize}
-\end{column}
-\begin{column}{5cm}
-\end{column}
-\end{columns}
 \end{frame}
 
 \begin{frame}{Optimality}
-\begin{columns}
-\begin{column}{5cm}
-\end{column}
-\begin{column}{5cm}
 \begin{itemize}
 	\item Small instances
 	\item Heuristic assignment vs Optimal assignment
@@ -170,16 +158,12 @@
 	\item Heuristic performance degrades with larger problem sizes
 	\item On average 10\% more than optimal
 \end{itemize}
-\end{column}
-\end{columns}
 \end{frame}
 
 %-----------------------------------------------------------------------------------
 \section{Contributions and Future Work}
 
 \begin{frame}{Contributions}
-\begin{columns}
-\begin{column}{5cm}
 \begin{itemize}
 	\item Formalised FT Mechanisms.
 	\item Developed AMPL Model
@@ -187,25 +171,15 @@
 	\item Developed a Heuristic solver, shown to be 10\% worse
 	\item Developed and experimented on SDFSimulator
 \end{itemize}
-\end{column}
-\begin{column}{5cm}
-\end{column}
-\end{columns}
 \end{frame}
 
 \begin{frame}{Future Work}
-\begin{columns}
-\begin{column}{5cm}
-\end{column}
-\begin{column}{5cm}
 \begin{itemize}
 	\item Parallelism
 	\item Hybridising fault tolerance mechanisms
 	\item Approximations
 	\item Cloud deployment.
 \end{itemize}
-\end{column}
-\end{columns}
 \end{frame}
 
 \begin{frame}[allowframebreaks]{References}
