finish honours and start game theory

--- a/hons/docs/finalPresentation.tex
+++ b/hons/docs/finalPresentation.tex
@@ -11,7 +11,7 @@
 
 \usetheme{Goettingen}
 \title[SDF]{Fault Tolerance for Cloud-Based Streaming Programs}
-\author{Nic Hollingum}
+\author{Nic Hollingum \\ Supervisor: Dr. Bernhard Scholz}
 \institute{USYD}
 \begin{document}
 
@@ -62,7 +62,7 @@
 			\item StreamIt \cite{thies10}
 			\item S-Net \cite{pen09}
 			\item InfoSphere, Spade \cite{ged08}
-			\item DryadLinq \cite{yu08}
+			\item DryadLINQ \cite{yu08}
 		\end{itemize}
 	\item Fault Tolerance
 		\begin{itemize}
@@ -139,12 +139,12 @@
 	\item Single Failure:
 	\begin{itemize}
 		\item Successful computations
-		\item Replication shows no overhead.
+		\item Replication shows no overhead
 		\item Recomputation has restarting overhead
 	\end{itemize}
 	\item Multiple failure:
 	\begin{itemize}
-		\item Replication fails after enough processors go offline.
+		\item Replication fails after enough processors go offline
 		\item Recomputation excessively restarts
 	\end{itemize}
 \end{itemize}
@@ -153,7 +153,7 @@
 \begin{frame}{Optimality}
 \begin{itemize}
 	\item Small instances
-	\item Heuristic assignment vs Optimal assignment
+	\item Heuristic assignment vs. Optimal assignment
 	\item Heuristic performance stable over replications
 	\item Heuristic performance degrades with larger problem sizes
 	\item On average 10\% more than optimal
@@ -165,7 +165,7 @@
 
 \begin{frame}{Contributions}
 \begin{itemize}
-	\item Formalised FT Mechanisms.
+	\item Formalised FT Mechanisms
 	\item Developed AMPL Model
 	\item Proved NP-Hardness
 	\item Developed a Heuristic solver, shown to be 10\% worse
@@ -178,7 +178,7 @@
 	\item Parallelism
 	\item Hybridising fault tolerance mechanisms
 	\item Approximations
-	\item Cloud deployment.
+	\item Cloud deployment
 \end{itemize}
 \end{frame}
 
