--- a/info5010b/biblio.bib
+++ b/info5010b/biblio.bib
@@ -18,6 +18,14 @@
   publisher={Springer}
 }
 
+@article{mobile,
+  title={Game theoretic analysis of security in mobile ad hoc networks},
+  author={Michiardi, P. and Molva, R.},
+  year={2002},
+  publisher={Citeseer}
+}
+
+
 @article{random,
  author = {Paruchuri, Praveen and Pearce, Jonathan P. and Marecki, Janusz and Tambe, Milind and Ord\'{o}\~{n}ez, Fernando and Kraus, Sarit},
  title = {Coordinating randomized policies for increasing security of agent systems},
