--- a/info5010b/biblio.bib
+++ b/info5010b/biblio.bib
@@ -25,6 +25,14 @@
   publisher={Citeseer}
 }
 
+@inproceedings{xrandom,
+  title={Security in multiagent systems by policy randomization},
+  author={Paruchuri, P. and Tambe, M. and Ord{\'o}{\~n}ez, F. and Kraus, S.},
+  booktitle={Proceedings of the fifth international joint conference on Autonomous agents and multiagent systems},
+  pages={273--280},
+  year={2006},
+  organization={ACM}
+}
 
 @article{random,
  author = {Paruchuri, Praveen and Pearce, Jonathan P. and Marecki, Janusz and Tambe, Milind and Ord\'{o}\~{n}ez, Fernando and Kraus, Sarit},
